--- a/example.html
+++ b/example.html
@@ -4,14 +4,14 @@
 <meta charset="utf-8">
 <title>Creative Interation</title>
 </head>
-<body>
-<h1>My First Website</h2>
-  <h2>I hope u like it.</h2>
+<body style="background-color: lavender;">
+<h1 style="background-color: lightskyblue;color:#fefdff;">My First Website</h2>
+  <h2 style="border-style:solid;  border-width:1px;">I hope u like it.</h2>
    <h3>I hope u like it.</h3>
    <h4>I hope u like it.</h4>
    <h5>I hope u like it.</h5>
    <h6>I hope u like it.</h6>
-   <p>this is my paragraph.</p><br>
+   <p style="color:midnightblue;">this is my paragraph.</p><br>
    <p>this is my paragraph.</p>
    <b>Bold text</b>
    <i>Italic text</i>
@@ -20,6 +20,7 @@
    <sub>subscript text</sub>
    <sup>superscript text</sup>
    <img src="http://img.peipeilove.com/img/AnimeImage/2019/20190924/w_20190924153653365367.jpg">
-   <a href="http://www.cuc.edu.cn/mainm.htm">this is the website of CUC</a>
+   <a href="http://www.cuc.edu.cn/mainm.htm" target="_blank">this is the website of CUC</a><br>
+   <img src="handsome guy.jpg">
 </body>
 </html>
